# transcribe

./: .gitignore  CMakeLists.txt  settings.gradle.kts  whisper.patch
.github/workflows/: flow.yml
app/: CMakeLists.txt  build.gradle.kts  jni.c  my-release-key.jks
app/src/androidTest/java/eu/schmitthenner/transcribe/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/eu/schmitthenner/transcribe/: DownloadCompleteReceiver.kt  MainActivity.kt  Model.kt  Recorder.kt  Transcriber.kt  WhisperLib.kt
app/src/main/java/eu/schmitthenner/transcribe/ui/: Main.kt  Settings.kt
app/src/main/java/eu/schmitthenner/transcribe/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/eu/schmitthenner/transcribe/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
